grayscaled images/fix the body top hidden by nav

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -627,7 +627,9 @@ pre tt:after {
 
 /* my additions */
 
-h1 {
+
+
+h1, h2 {
   font-family: 'Wire One', sans-serif;
   a {
     padding-left: 30px;
